--- a/Samples/Testbed/Testbed.WINDOWS.MG.csproj
+++ b/Samples/Testbed/Testbed.WINDOWS.MG.csproj
@@ -118,6 +118,8 @@
     <Compile Include="Tests\SparseBodiesTest.cs" />
     <Compile Include="Tests\SparseBodiesWithManyFixturesTest.cs" />
     <Compile Include="Tests\SphereStackTest.cs" />
+    <Compile Include="Tests\SPH1Test.cs" />
+    <Compile Include="Tests\SPH2Test.cs" />
     <Compile Include="Tests\TestEntries.cs" />
     <Compile Include="Tests\TextureVerticesTest.cs" />
     <Compile Include="Tests\TheLeaningTowerofLireTest.cs" />
