--- a/Physics2D/Aether.Physics2D.NET40.csproj
+++ b/Physics2D/Aether.Physics2D.NET40.csproj
@@ -20,7 +20,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>..\bin\Debug\Windows.MG\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;WINDOWS;XNAAPI;MG;NET40</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;WINDOWS;MG;NET40</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
@@ -32,7 +32,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\bin\Release\Windows.MG\</OutputPath>
-    <DefineConstants>TRACE;WINDOWS;XNAAPI;MG;NET40</DefineConstants>
+    <DefineConstants>TRACE;WINDOWS;MG;NET40</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
@@ -107,6 +107,8 @@
     <Compile Include="Common\LineTools.cs" />
     <Compile Include="Common\Math.cs" />
     <Compile Include="Common\Maths\Constant.cs" />
+    <Compile Include="Common\Maths\Vector2.cs" />
+    <Compile Include="Common\Maths\Vector3.cs" />
     <Compile Include="Common\Path.cs" />
     <Compile Include="Common\PathManager.cs" />
     <Compile Include="Common\Maths\Complex.cs" />
@@ -124,17 +126,12 @@
     <Compile Include="Common\Serialization.cs" />
     <Compile Include="Common\TextureTools\MarchingSquares.cs" />
     <Compile Include="Common\TextureTools\Terrain.cs" />
-    <Compile Include="Common\TextureTools\TextureConverter.cs" />
     <Compile Include="Common\Vertices.cs" />
     <Compile Include="Content\BodyContainer.cs" />
     <Compile Include="Content\PolygonContainer.cs" />
-    <Compile Include="ContentReaders\BodyContainerReader.cs" />
-    <Compile Include="ContentReaders\PolygonContainerReader.cs" />
-    <Compile Include="Controllers\AbstractForceController.cs" />
     <Compile Include="Controllers\BuoyancyController.cs" />
     <Compile Include="Controllers\Controller.cs" />
     <Compile Include="Controllers\GravityController.cs" />
-    <Compile Include="Controllers\SimpleWindForce.cs" />
     <Compile Include="Controllers\VelocityLimitController.cs" />
     <Compile Include="Dynamics\Body.cs" />
     <Compile Include="Dynamics\Body.Factory.cs" />
@@ -180,10 +177,6 @@
     <Compile Include="Properties\AssemblyInfo.NET40.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="MonoGame.Framework">
-      <HintPath>..\packages\MonoGame.Framework.Portable.3.2.99.1-Beta\lib\portable-net40+sl40+win+wp80\MonoGame.Framework.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
   </ItemGroup>
