--- a/Physics2D/Aether.Physics2D.NETSTANDARD20.csproj
+++ b/Physics2D/Aether.Physics2D.NETSTANDARD20.csproj
@@ -9,13 +9,13 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <DefineConstants>DEBUG;TRACE;XNAAPI;NETSTANDARD;NETSTANDARD2_0</DefineConstants>
+    <DefineConstants>DEBUG;TRACE;NETSTANDARD;NETSTANDARD2_0</DefineConstants>
     <OutputPath>..\bin\Debug\netstandard2.0\</OutputPath>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <DefineConstants>TRACE;XNAAPI;NETSTANDARD;NETSTANDARD2_0</DefineConstants>
+    <DefineConstants>TRACE;NETSTANDARD;NETSTANDARD2_0</DefineConstants>
     <OutputPath>..\bin\Release\netstandard2.0\</OutputPath>
   </PropertyGroup>
 
@@ -81,6 +81,8 @@
     <Compile Include="Common\LineTools.cs" />
     <Compile Include="Common\Math.cs" />
     <Compile Include="Common\Maths\Constant.cs" />
+    <Compile Include="Common\Maths\Vector2.cs" />
+    <Compile Include="Common\Maths\Vector3.cs" />
     <Compile Include="Common\Path.cs" />
     <Compile Include="Common\PathManager.cs" />
     <Compile Include="Common\Maths\Complex.cs" />
@@ -98,17 +100,12 @@
     <Compile Include="Common\Serialization.cs" />
     <Compile Include="Common\TextureTools\MarchingSquares.cs" />
     <Compile Include="Common\TextureTools\Terrain.cs" />
-    <Compile Include="Common\TextureTools\TextureConverter.cs" />
     <Compile Include="Common\Vertices.cs" />
     <Compile Include="Content\BodyContainer.cs" />
     <Compile Include="Content\PolygonContainer.cs" />
-    <Compile Include="ContentReaders\BodyContainerReader.cs" />
-    <Compile Include="ContentReaders\PolygonContainerReader.cs" />
-    <Compile Include="Controllers\AbstractForceController.cs" />
     <Compile Include="Controllers\BuoyancyController.cs" />
     <Compile Include="Controllers\Controller.cs" />
     <Compile Include="Controllers\GravityController.cs" />
-    <Compile Include="Controllers\SimpleWindForce.cs" />
     <Compile Include="Controllers\VelocityLimitController.cs" />
     <Compile Include="Dynamics\Body.cs" />
     <Compile Include="Dynamics\Body.Factory.cs" />
@@ -153,13 +150,6 @@
 
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.NETSTANDARD20.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="MonoGame.Framework.Portable" Version="3.2.99.1-Beta">
-      <ExcludeAssets>*</ExcludeAssets>
-      <NoWarn>NU1701</NoWarn>
-    </PackageReference>
   </ItemGroup>
 
 </Project>
